updated Gemfile due to security vulnerabilities

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -9,10 +9,10 @@
   <p>Please enter your date of birth</p>
     <form class="rude-form">
       <div class="field-row  " data-dob_format="mm-dd-yyyy">
-        <!-- <input type="number" name="month" placeholder="MM" pattern="[0-9]*" autocomplete="off">
+ <!--        <input type="number" name="month" placeholder="MM" pattern="[0-9]*" autocomplete="off">
         <input type="number" name="date" placeholder="DD" pattern="[0-9]*" autocomplete="off"> -->
         <input type="number" name="year" placeholder="YYYY" pattern="[0-9]*" autocomplete="off">
-        <input type="button" class="rude-button" disabled="" value="OK" data-cmd="/rude-form-submit/">
+        <input type="button" class="rude-button" enabled= "" value="OK" data-cmd="/rude-form-submit/">
       </div>
       <div class="field-row">
         "You have to be over "
